Add compiling, but not working version of bud paths example

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,11 @@ project/plugins/project/
 .lib/
 
 ################################################################################
+# ensime
+################################################################################
+.ensime*
+
+################################################################################
 # eclipse
 ################################################################################
 bin/
